<resources>
    <string name="tab1">EXPENSES</string>
    <string name="tab2">CATEGORIES</string>
    <string name="tab3">INSPECTION</string>
    <string name="tab4">ANALYSIS</string>
    <string name="app_name">StickToYourBudget</string>
    <string name="cat1">Supermarket</string>
    <string name="cat1desc">Cost of shopping in a supermarket</string>
    <string name="cat2">Fuel</string>
    <string name="cat2desc">Fuel cost for a city car</string>
    <string name="cat3">Clothes</string>
    <string name="cat3desc">Cost of shopping for clothes</string>
    <string name="cat4">Cinema</string>
    <string name="cat4desc">Cost of cinema tickets</string>
    <string name="cat5">Food</string>
    <string name="cat5desc">Cost of dining in a restaurant</string>
    <string name="cat6">Night out</string>
    <string name="cat6desc">Cost of a night out in bar</string>
    <string name="exp1">Add Expense</string>
    <string name="exp2">Amount</string>
    <string name="exp3">Description</string>
    <string name="exp5">Optional</string>
    <string name="exp4">Category</string>
    <string name="exp6">Location</string>
    <string name="newcat1">Add Category</string>
    <string name="newcat2">Category name</string>
    <string name="newcat3">Add</string>
    <string name="ana1">Expense Analysis</string>
    <string name="insp1">Expense Inspection</string>
    <string name="coordsb">Coordinates</string>
    <string name="ana2">Search</string>
    <string name="ana3">Search from:</string>
    <string name="ana4">Search to:</string>
    <string name="ana5">DD/MM/YYYY</string>
    <string name="ana6">Date</string>
    <string name="ana7">Category</string>
    <string name="title_activity_maps">Map</string>
</resources>
