<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
        android:textSize="17sp"
        android:text="@string/exp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Catspinner"
        android:layout_below="@+id/textView8"
        android:layout_alignBottom="@+id/numAmount"
        android:layout_alignStart="@+id/textView8" />

    <TextView
        android:textSize="17sp"
        android:text="@string/exp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/Catspinner"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textSize="14sp"
        android:layout_below="@+id/textView10"
        android:hint="@string/exp5"
        android:textColorHint="@drawable/selector"
        android:layout_alignParentStart="true"
        android:id="@+id/textDescription"
        android:layout_alignParentEnd="true" />
    <TextView
        android:textSize="17sp"
        android:text="@string/exp6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/textDescription"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textSize="14sp"
        android:hint="@string/exp5"
        android:textColorHint="@drawable/selector"
        android:id="@+id/textLocation"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/Catspinner" />

    <TextView
        android:textSize="17sp"
        android:text="@string/exp4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:layout_above="@+id/numAmount"
        android:layout_alignEnd="@+id/Submbutton" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:textSize="14sp"
        android:id="@+id/numAmount"
        android:singleLine="true"
        android:selectAllOnFocus="true"
        android:numeric="decimal"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/Submbutton"
        android:layout_alignEnd="@+id/textView11" />

    <TextView
        android:text="@string/exp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:id="@+id/textView6"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/newcat3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Submbutton"
        android:layout_below="@+id/textLocation"
        android:layout_marginTop="41dp"
        android:layout_alignStart="@+id/textView6"
        android:layout_alignEnd="@+id/textView6" />

    <Button
        android:text="@string/coordsb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:id="@+id/Coordsbutton"
        android:layout_alignTop="@+id/textLocation"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textLocation" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>